[package]
name = "architect-vertex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
architect-api = { version = "7.24.7", features = ["grpc"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"]}
env_logger = "0.11"
futures = "0.3.31"
hex = "0.4"
log = "0.4"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.13.0"
vertex-sdk = "0.3.4"
